<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ZusammenfassungActivity">

    <Button
        android:id="@+id/button_tagebuch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tagebuch ansehen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_laengeDurchschnitt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/durchschnittliche_zyklus_l_nge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_tagebuch"
        android:paddingBottom="4dp"
        android:paddingTop="12dp"/>

    <TextView
        android:id="@+id/textview_laengePeriode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aktuelle_l_nge_periode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_laengeDurchschnitt"
        android:paddingBottom="12dp" />

    <TextView
        android:id="@+id/textview_letzteZyklen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letzte_zyklen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_laengePeriode"
        android:textSize="24sp"
        android:paddingBottom="4dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_zyklen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_letzteZyklen"
        android:layout_marginBottom="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>